ng-content: multiplos conteudos no componente utilizando seletor

--- a/src/app/demos/arquitetura-componentes/produto-dashboard/produto-dashboard.component.html
+++ b/src/app/demos/arquitetura-componentes/produto-dashboard/produto-dashboard.component.html
@@ -6,6 +6,9 @@
             *ngFor='let produto of produtos'
             [produto]='produto'
             (status)='mudarStatus($event)'
-        ></app-produto-card-detalhe>
+        >
+        <p acabou>Ou vá até uma de nossas lojas.</p>
+        <p ultimas>Últimas unidades</p>
+    </app-produto-card-detalhe>
     </div>
 </div>
