--- a/src/app/demos/arquitetura-componentes/componentes/produto-card-detalhe/produto-card-detalhe.component.html
+++ b/src/app/demos/arquitetura-componentes/componentes/produto-card-detalhe/produto-card-detalhe.component.html
@@ -15,12 +15,14 @@
         <div *ngIf="!produto.ativo" class="card-body">
             <div>
                 <p class='alert alert-warning'>Avise-me quando chegar.</p>
+                <ng-content select='[acabou]'></ng-content>
             </div>
         </div>
-
+        
         <div *ngIf="produto.ativo" class="card-body">
             <div>
                 <h4>{{ produto.valor | currency:'BRL':'symbol':'1.2-2':'pt' }}</h4>
+                <ng-content select='[ultimas]'></ng-content>
             </div>
         </div>
     </div>
