--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -7,17 +7,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/home']">Home</a>
+          <li class="nav-item" roteop routerLinkActive='active'>
+            <a class="nav-link" [routerLink]="['/home']">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/produtos']">Produtos</a>
+          <li class="nav-item" roteop routerLinkActive='active'>
+            <a class="nav-link" [routerLink]="['/produtos']">Produtos</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/cadastro']">Cadastro</a>
+          <li class="nav-item" roteop routerLinkActive='active'>
+            <a class="nav-link" [routerLink]="['/cadastro']">Cadastro</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['/sobre']">Sobre</a>
+          <li class="nav-item" roteop routerLinkActive='active'>
+            <a class="nav-link" [routerLink]="['/sobre']">Sobre</a>
           </li>
         </ul>
       </div>
