--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -1,26 +1,31 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" [routerLink]="['/home']">Minha App Angular</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item" roteop routerLinkActive='active'>
+  <div class="container">
+    <a class="navbar-brand" [routerLink]="['/home']">Minha App Angular</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item" *ngFor='let item of itemNav' [routerLinkActiveOptions]='{exact: item.exact}'
+          routerLinkActive='active'>
+          <a class="nav-link" [routerLink]="item.link">{{item.name}}</a>
+        </li>
+        <!-- <li class="nav-item" routerLinkActive='active'>
             <a class="nav-link" [routerLink]="['/home']">Home</a>
           </li>
-          <li class="nav-item" roteop routerLinkActive='active'>
+          <li class="nav-item" routerLinkActive='active'>
             <a class="nav-link" [routerLink]="['/produtos']">Produtos</a>
           </li>
-          <li class="nav-item" roteop routerLinkActive='active'>
+          <li class="nav-item" routerLinkActive='active'>
             <a class="nav-link" [routerLink]="['/cadastro']">Cadastro</a>
           </li>
-          <li class="nav-item" roteop routerLinkActive='active'>
+          <li class="nav-item" routerLinkActive='active'>
             <a class="nav-link" [routerLink]="['/sobre']">Sobre</a>
-          </li>
-        </ul>
-      </div>
+          </li> -->
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 <!-- FIM Navigation -->
