--- a/src/app/demos/arquitetura-componentes/componentes/produto-editar/produto-editar.component.html
+++ b/src/app/demos/arquitetura-componentes/componentes/produto-editar/produto-editar.component.html
@@ -1,2 +1,41 @@
-<h1>produto-editar works!</h1>
-<h1>produto-editar works!</h1>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <div class="card text-center">
+                <div class="card-body">
+                    <div style="align-content: center">
+                        <img src="/assets/{{ produto.imagem }}" class='img-fluid my-3' style='height: 150px;'
+                            [title]="produto.nome" [alt]="produto.nome">
+                    </div>
+
+                    <h4 class="card-title">{{ produto.nome | titlecase }}</h4>
+
+                    <div [ngSwitch]="produto.ativo">
+                        <p *ngSwitchCase="true">Em estoque</p>
+                        <p *ngSwitchCase="false">Fora de estoque</p>
+                    </div>
+
+                    <div *ngIf="!produto.ativo" class="card-body">
+                        <div>
+                            <p class='alert alert-warning'>Avise-me quando chegar.</p>
+                            <ng-content select='[acabou]'></ng-content>
+                        </div>
+                    </div>
+
+                    <div *ngIf="produto.ativo" class="card-body">
+                        <div>
+                            <h4>{{ produto.valor | currency:'BRL':'symbol':'1.2-2':'pt' }}</h4>
+                            <ng-content select='[ultimas]'></ng-content>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-footer">
+                    <a class="btn btn-info">
+                        <i class="fa fa-edit"></i> Salvar
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
