navegacao entre rotas com Router.navigate()

--- a/src/app/demos/arquitetura-componentes/componentes/produto-editar/produto-editar.component.html
+++ b/src/app/demos/arquitetura-componentes/componentes/produto-editar/produto-editar.component.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="card-footer">
-                    <a class="btn btn-info">
+                    <a class="btn btn-info" (click)='salvar()'>
                         <i class="fa fa-edit"></i> Salvar
                     </a>
                 </div>
